--- a/index.html
+++ b/index.html
@@ -216,8 +216,43 @@
 </section>
 <!-- dishes section ends-->
 
+<!-- about section starts-->
 
+<section class="about" id="about">
+<h3 class="sub-heading"> Sobre nós</h3>
+<h3 class="heading"> Porque nos escolher?</h1>
 
+<div class="row">
+    <div class="image">
+        <img src="images/about-img.png" alt="">
+    </div>
+
+    <div class="content">
+        <h3>Melhores comidas da cidade!</h3>
+        <p>Aqui você encontra comida boas de verdade por um preço acessível ao seu bolso naquela hora da fome!</p>
+        <p>Div para preencher espaço</p>
+
+        <div class="icons-container">
+            <div class="icons">
+                <i class="fas fa-shipping-fast"></i>
+                <span>Entrega grátis!</span>
+            </div>
+            <div class="icons">
+                <i class="fas fa-dollar-sign"></i>
+                <span>Pagamento Facilitado</span>
+            </div>
+            <div class="icons">
+                <i class="fas fa-headset"></i>
+                <span>Atendemos 24 horas!</span>
+            </div>
+        </div>
+        <a href="#" class="btn">Conheça Mais</a>
+        
+        </div>
+        
+</div>
+</section>
+<!-- about section ends-->
 
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
